table and main overflow fix

--- a/src/styles/scss/app.scss
+++ b/src/styles/scss/app.scss
@@ -8,6 +8,7 @@ html {
   padding: 0;
   color: #fff;
   font-size: 14px;
+  background-color: #4C4F5F;
 }
 *:focus {
   outline: none;
